fix peoples and quotes

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -15,6 +15,8 @@ $enable-rtl: true;
 // import sweet alert
 @import '~sweetalert2/dist/sweetalert2.min.css';
 
+// import vue-select
+@import '~vue-select/dist/vue-select.css';
 
 @import "layout";
 @import "example";
