add picture field

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -18,6 +18,8 @@ $enable-rtl: true;
 // import vue-select
 @import '~vue-select/dist/vue-select.css';
 
+@import "~dropzone/dist/dropzone.css";
+
 @import "layout";
 @import "example";
 
